--- a/SensorCollector/src/main/res/values/strings.xml
+++ b/SensorCollector/src/main/res/values/strings.xml
@@ -2,9 +2,13 @@
 <resources>
 
     <string name="app_name">SensorCollector</string>
-    <string name="title_section1">Section 1</string>
-    <string name="title_section2">Section 2</string>
-    <string name="title_section3">Section 3</string>
+    <string name="title_section1">Record</string>
+    <string name="title_section2">View</string>
+    <string name="title_section3">...</string>
     <string name="action_settings">Settings</string>
+    <string name="hello_world">Some stuff here</string>
+    <string name="filenameInput">Save data to</string>
+    <string name="start">Start</string>
+    <string name="stop">Stop</string>
 
 </resources>
